# TypeCasting

./: .copier-answers.yml  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: release.yml
buildSrc/src/main/kotlin/typecasting/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/typecasting/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/gay/object/typecasting/mixin/: MixinArithmeticEngine.java  MixinCastingVM.java  MixinDatagenMain.java  MixinFrameEvaluate.java  TypeCastingMixinConfigPlugin.java
common/src/main/kotlin/gay/object/typecasting/: TypeCasting.kt  TypeCastingAbstractions.kt  TypeCastingClient.kt
common/src/main/kotlin/gay/object/typecasting/casting/: TypeCastingActionUtils.kt
common/src/main/kotlin/gay/object/typecasting/config/: TypeCastingClientConfig.kt  TypeCastingServerConfig.kt
common/src/main/kotlin/gay/object/typecasting/datagen/: TypeCastingActionTags.kt
common/src/main/kotlin/gay/object/typecasting/mixinsupport/: IMixinArithmeticEngine.kt  OperatorResolvedException.kt
common/src/main/kotlin/gay/object/typecasting/networking/: TypeCastingNetworking.kt
common/src/main/kotlin/gay/object/typecasting/registry/: TypeCastingActions.kt  TypeCastingIotaTypes.kt  TypeCastingRegistrar.kt
common/src/main/resources/: architectury.common.json  typecasting-common.mixins.json
common/src/main/resources/assets/typecasting/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/typecasting/lang/: en_us.flatten.json5
doc/src/hexdoc_typecasting/: _hooks.py
docs/: CNAME  index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
docs/v/latest/main/en_us/patterns/great_spells/: index.html
docs/v/latest/main/en_us/patterns/great_spells/dummy_great_spells/: index.html
docs/v/latest/main/en_us/patterns/spells/: index.html
docs/v/latest/main/en_us/patterns/spells/dummy_spells/: index.html
fabric/: build.gradle.kts
fabric/src/main/kotlin/gay/object/typecasting/fabric/: FabricTypeCasting.kt  FabricTypeCastingClient.kt  FabricTypeCastingModMenu.kt  FabricTypeCastingServer.kt  TypeCastingAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  typecasting-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/resources/: pack.mcmeta  typecasting-forge.mixins.json
(+28 files in other folders)
